# md2pdf

./: .gitignore  README.md  pyproject.toml
md2pdf/: cli.py  main.py
tests/: test_cli.py
